Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Added an example file for *nix (Linux/Unix) .zope-external-edit to use with
  Zope External Editor.
- Added a doc/howto-catalog_navigation.txt.
Bug fixes
~~~~~~~~~
- #1871: "Search highlighting does not work anymore".
- Removed cpsinstall.py which is now totally out of date and thus useless.
- French spelling for metadata.
- Added back the publication date in the view layout of the News Item.
- Added a "subjects" CSS class to style the subject widget of the News Item.
- Fixed for the CPSDefault.Extensions.utils.reorderContainerContents the
  documentation and the way the parameter ascending is passed.
- Removed the history listing from content_submit_form to improved usability:
  In fact the history listing gets very long on a frequently used portal and it
  was making laborious to find the submit button in such a long page. Moreover
  when one publishes or requests for publishing, one is only interested in the 
  current revisions.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 