@@ -12,8 +12,6 @@
     portal_type="Custom Portlet"/>
  <object name="portlet_breadcrumbs" meta_type="CPS Portlet"
     portal_type="Breadcrumbs Portlet"/>
- <object name="portlet_breadcrumbs2" meta_type="CPS Portlet"
-    portal_type="Breadcrumbs Portlet"/>
  <object name="portlet_conformance" meta_type="CPS Portlet"
      portal_type="Custom Portlet"/>
  <object name="portlet_conformance_statement" meta_type="CPS Portlet"
