@@ -5,21 +5,21 @@
   <e v="admin"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060103165529Z"/>
- <f id="Creator" v="admin"/>
+ <f id="CreationDate" v="20060125140504Z"/>
+ <f id="Creator" v="manager"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20060103165530Z"/>
+ <f id="ModificationDate" v="20080111140517Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
- <f id="Title" v="Breadcrumbs"/>
+ <f id="Title" v="Breadcrumb Portlet"/>
  <f id="allow_discussion" v="False"/>
- <f id="cache_cleanup_date" v=""/>
+ <f id="cache_cleanup_date" v="0.0"/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="300"/>
  <f id="disable_override" v="0"/>
@@ -28,14 +28,14 @@
  <f id="display_site_root" v="True"/>
  <f id="first_item" v="0"/>
  <f id="highlight_last_item" v="0"/>
- <f id="identifier" v="portlet_774132486"/>
+ <f id="identifier" v="portlet_breadcrumbs"/>
  <f id="javascript" v=""/>
  <f id="layout" v=""/>
  <f id="order" v="0"/>
  <f id="portlet" v=""/>
  <f id="preview"/>
  <f id="provider" v=""/>
- <f id="slot" v="top"/>
+ <f id="slot" v="breadcrumb"/>
  <f id="slot_override" v="0"/>
  <f id="visibility_range" v="0-0"/>
 </object>
