@@ -1,41 +1,0 @@
-<?xml version="1.0"?>
-<object name="portlet_breadcrumbs2" meta_type="CPS Portlet"
-   portal_type="Breadcrumbs Portlet">
- <f id="Contributors">
-  <e v="admin"/>
- </f>
- <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060125140504Z"/>
- <f id="Creator" v="manager"/>
- <f id="Description" v=""/>
- <f id="EffectiveDate" v=""/>
- <f id="ExpirationDate" v=""/>
- <f id="Format" v="text/html"/>
- <f id="Language" v=""/>
- <f id="ModificationDate" v="20060125140517Z"/>
- <f id="Relation" v=""/>
- <f id="Rights" v=""/>
- <f id="Source" v=""/>
- <f id="Subject"/>
- <f id="Title" v="Breadcrumb Portlet"/>
- <f id="allow_discussion" v="False"/>
- <f id="cache_cleanup_date" v="0.0"/>
- <f id="cache_params"/>
- <f id="cache_timeout" v="300"/>
- <f id="disable_override" v="0"/>
- <f id="display" v="horizontal_trail"/>
- <f id="display_hidden_folders" v="True"/>
- <f id="display_site_root" v="True"/>
- <f id="first_item" v="0"/>
- <f id="highlight_last_item" v="0"/>
- <f id="identifier" v="portlet_breadcrumbs2"/>
- <f id="javascript" v=""/>
- <f id="layout" v=""/>
- <f id="order" v="0"/>
- <f id="portlet" v=""/>
- <f id="preview"/>
- <f id="provider" v=""/>
- <f id="slot" v="breadcrumb"/>
- <f id="slot_override" v="0"/>
- <f id="visibility_range" v="0-0"/>
-</object>
