@@ -20,6 +20,8 @@ Bug fixes
   was making laborious to find the submit button in such a long page. Moreover
   when one publishes or requests for publishing, one is only interested in the 
   current revisions.
+- Removed CPSDefault/profiles/default/cps_portlets/portlet_breadcrumbs2.xml
+  which was an unused portlet.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
